--- a/4-mtCR/readme.org
+++ b/4-mtCR/readme.org
@@ -837,6 +837,8 @@ write.table(anno, "haplotype.published-groups.txt",
 #+header: :file haplotype-pop-membership-heatmap.png
 #+header: :width 16 :height 4 :units in :res 100 :bg white
 #+begin_src R
+anno <- read.delim("haplotype.published-groups.txt")
+
 heatmap.plot <- ggplot(anno, aes(ID,Group)) +
   geom_tile(aes(fill=Group), na.rm=T) +
   geom_text(aes(label=count), na.rm=T) +
@@ -957,26 +959,42 @@ $New
 
 ** Phylogenetics tree
 
-#+HEADER: :results output graphics file :file mtcr-nj-tree-fixed.png
-#+header: :width 13.5 :height 15 :units in :res 200 :bg white
-#+begin_src R :scale 2
-tree.data <- haplotypes.with_outgroup@sequence %>%
-  as.DNAbin %>%
-  dist.dna %>%
-  nj %>%
-  root(outgroup=c("mtCR.out-1", "mtCR.out-2"))
+#+HEADER: :results output graphics file :file mtcr-nj-tree-fixed.tiff
+#+header: :width 12.5 :height 14 :units in :res 180 :bg white
+#+begin_src R :compression lzw
 
-tree <- ggtree(tree.data) +
-  geom_tiplab(align=T, as_ylab=T) +
-#  geom_nodelab(aes(label=node), bg="white") +
-#  geom_tiplab(aes(label=node), bg="white") +
-  ggtitle("(A) Neighboor-Joining Tree") +
-  scale_x_continuous(breaks=seq(0.005, 0.05, 0.01)) +
-  theme_tree2()
-tree <- flip(tree, 97, 91)
-tree <- flip(tree, 132, 117)
+## haplotypes.with_outgroup.fasta <-
+##   read.FASTA("2-haplotypes.with_outgroup.fixed.fasta")
 
-plot <- ggplot(anno, aes(Group, ID)) +
+## tree.data <- haplotypes.with_outgroup.fasta %>%
+##   dist.dna(pairwise.deletion = T) %>%
+##   nj
+
+## tree.data$node.label <-
+##   boot.phylo(tree.data,
+##              as.matrix(haplotypes.with_outgroup.fasta),
+##              FUN=function(xx) nj(dist.gene(xx,
+##                                            pairwise.deletion = T)),
+##              B=1000)
+## tree.data <- root(tree.data,
+##                   outgroup=c("mtCR.out-1", "mtCR.out-2"))
+
+plot <- anno %>%
+  mutate(Group = factor(Group, c('NW.inner',
+                                 'E.inner',
+                                 'NW.outer',
+                                 'E.outer',
+                                 'NW.Oceanic',
+                                 'NE.oceanic',
+                                 'E.oceanic',
+                                 'green',
+                                 'blue',
+                                 "New")),
+         best.pop = factor(best.pop, c("mtCR.sound",
+                                       "mtCR.inner",
+                                       "mtCR.outer",
+                                       "mtCR.ocean"))) %>%
+  ggplot(aes(Group, ID)) +
   geom_tile(aes(fill=Group), na.rm=T) +
   geom_text(aes(label=count), na.rm=T) +
   facet_grid(cols=vars(Set), scales="free", space="free") +
@@ -1007,15 +1025,37 @@ plot.structure <- right_join(member.data,
     legend.direction = "horizontal",
     legend.background = element_blank())
 
+tree <- ggtree(tree.data) +
+  geom_nodepoint(aes(color=as.numeric(label)), na.rm=T,
+                 size=3) +
+  geom_tiplab(align=T, as_ylab=T) +
+  #geom_text2(aes(label=label, subset=!isTip),
+  #           vjust=0.5, hjust=-0.1, size=3) +
+  #geom_nodelab(aes(label=node), geom="label", bg="white") +
+  #geom_tiplab(aes(label=node), bg="white") +
+  ggtitle("(A) Neighboor-Joining Tree") +
+  scale_x_continuous(breaks=seq(0.005, 0.05, 0.01)) +
+  scale_color_viridis_c(name="Bootstrap Values") +
+  guides(color=guide_colorbar(title.position="top")) +
+  theme_tree2() +
+  theme(legend.position = c(0.25,0.95),
+        legend.direction = "horizontal")
+tree <- flip(tree, 116, 104)
+tree <- flip(tree, 106, 88)
+tree <- flip(tree, 117, 132)
+tree <- flip(tree, 87, 97)
+tree <- flip(tree, 84, 89)
+tree <- flip(tree, 82, 90)
+#
 main.plot <- plot.structure  %>%
-  insert_left(tree)%>%
-  insert_right(plot)
+  insert_left(tree, width=0.80)%>%
+  insert_right(plot, width=0.90)
 options("aplot_guides" = "keep")
 main.plot
       #+end_src
 
 #+RESULTS:
-[[file:mtcr-nj-tree-fixed.png]]
+[[file:mtcr-nj-tree-fixed.tiff]]
 ** Stats
 1) Haplotype diversity
 
