--- a/5-full-mito/readme.org
+++ b/5-full-mito/readme.org
@@ -582,9 +582,6 @@ plots.structure.hap.all <- lapply(2:9, function(x) {
 })
 cowplot::plot_grid(plotlist=plots.structure.hap.all, ncol=2)
  #+end_src
-
- #+RESULTS:
- [[file:3-structure-haplotype-membership-all.png]]
 9) Sankey
    #+header: :results output graphics file
    #+header: :file 3-structure-membership-sankey.png
@@ -975,8 +972,8 @@ p
 
 ** Map
    #+header: :results output graphics file
-   #+header: :file haplotype-map.png
-   #+header: :width 9 :height 14 :units in :res 600 :bg white
+   #+header: :file haplotype-map.tiff :compression lzw
+   #+header: :width 9 :height 14 :units in :res 375 :bg white
    #+begin_src R
 library(tidyverse)
 library(hues)
@@ -1138,12 +1135,13 @@ plots <- mapply(function(d,name,color){
    SIMPLIFY=F)
 plots[[1]] = plots[[1]] +
     ## LABEL
-  annotate(geom = "text", x = 775000, y = 800000,
+  annotate(geom = "text", x = 810000, y = 790000,
            label = "North Central\nGulf of Mexico",
            fontface = "italic",
            family="ETBembo",
            color = "#0a71b3",
-           size = 10) +
+           size = 10)
+plots[[4]] = plots[[4]] +
   annotation_scale(location = "br", width_hint = 0.25) +
   annotation_north_arrow(location = "br", which_north = "true",
                          pad_x = unit(0.75, "in"),
@@ -1155,7 +1153,7 @@ cowplot::plot_grid(plotlist = plots, ncol = 1)
    #+end_src
  
    #+RESULTS:
-   [[file:haplotype-map.png]]
+   [[file:haplotype-map.tiff]]
 
 *** Is the stranding area of group 2 significant
 #+begin_src R
